fixed offset selection in smaller screens/ img align

--- a/benji-client/src/components/GuildHeader/GuildHeader.module.css
+++ b/benji-client/src/components/GuildHeader/GuildHeader.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: inline-flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   width: 100%;
 }
 
